tests/verifier/fail/test13.ial
type S
{
}

function void eh_reach_test()
{
    block entry
    {
        jump (foo);
    }

    block foo
    {
        jump (bar);
    }

    block bar
    {
        eh.rethrow;
    }
}
